tweaks on QuarkusCliConfigEncryptIT